--- a/cpkg/changelog
+++ b/cpkg/changelog
@@ -1,5 +1,6 @@
 ** version 1.0pa4 ** 15.05.2021
 Prealpha 4.
+ * из-за проблемы с пакетом make-ca (и сертификатами!), для скачивания пакетов использовался костыль. Однако, в релизе 2021.3 эта проблема была решена, поэтому и костыль был убран. Это значит, что cpkg 1.0pa4 не совместим с Calmira 2021.1-2021.2.1.
  * Добавление возможности скачивания пакета из репозиториев ПО
  * Перевод части ПМ на русский язык
  * Другие незначительные фиксы
