Обновлён перевод на русский язык, добавлен просмотр информациии о зависимостях пакета

--- a/src/var/db/cpkg/packages/cpkg/changelog
+++ b/src/var/db/cpkg/packages/cpkg/changelog
@@ -3,6 +3,7 @@ Prealpha 4.
  * Добавление возможности скачивания пакета из репозиториев ПО
  * Перевод части ПМ на русский язык
  * Другие незначительные фиксы
+ * обновление русского перевода
 
 ** version 1.0pa3 ** 12.05.2021
 Prealpha 3.
