--- a/src/changelog
+++ b/src/changelog
@@ -3,7 +3,7 @@ Prealpha 4.
  * Добавлен приоритет пакетов. Если приоритет - `user` (пользовательский), то пакет можно удалить. Если приоритет `system` (системный), то с пакетом не разрешено выполнять никаких действий, кроме обновления до новой версии и просмотра информации
  * Добавление автоматизированной системы сборки исходных текстов cpkg в пакет
  * Добавление возможности отображения зависимостей пакета в процедурах установки, удаления и просмотра информации о пакете
- * из-за проблемы с пакетом make-ca (и сертификатами!), для скачивания пакетов использовался костыль. Однако, в релизе 2021.3 эта проблема была решена, поэтому и костыль был убран. Это значит, что cpkg 1.0pa4 не совместим с Calmira 2021.1--2021.2.1.
+ * из-за проблемы с пакетом make-ca, для скачивания пакетов использовался костыль. Однако, в релизе Calmira GNU/Linux 2021.3 эта проблема была решена, поэтому и костыль был убран. Это значит, что cpkg 1.0pa4 не совместим с Calmira 2021.1--2021.2.1.
  * Добавление возможности скачивания пакета из репозиториев ПО
  * Перевод части ПМ на русский язык
  * Другие незначительные фиксы
@@ -23,4 +23,4 @@ Prealpha 2.
  * всяческие незначительные фиксы и исправления
 
 ** version 1.0pa1 **  10.05.2021
-Prealpha 1. Initial Release
+Prealpha 1. First Release
