Обновление утилиты по сборке cpkg в пакет

--- a/src/changelog
+++ b/src/changelog
@@ -1,12 +1,13 @@
 ** version 1.0pa4 ** 15.05.2021
 Prealpha 4.
- * Добавлен приоритет пакетов. Если приоритет - `user` (пользовательский), то пакет можно удалить. Если приоритет `system` (системный), то с пакетом не разрешено выполнять никаких действий, кроме обновления до новой версии и просмотра информации
- * Добавление автоматизированной системы сборки исходных текстов cpkg в пакет
- * Добавление возможности отображения зависимостей пакета в процедурах установки, удаления и просмотра информации о пакете
- * из-за проблемы с пакетом make-ca, для скачивания пакетов использовался костыль. Однако, в релизе Calmira GNU/Linux 2021.3 эта проблема была решена, поэтому и костыль был убран. Это значит, что cpkg 1.0pa4 не совместим с Calmira 2021.1--2021.2.1.
- * Добавление возможности скачивания пакета из репозиториев ПО
- * Перевод части ПМ на русский язык
- * Другие незначительные фиксы
+ * Исправлена функция веделия логов;
+ * Добавлен приоритет пакетов. Если приоритет - `user` (пользовательский), то пакет можно удалить. Если приоритет `system` (системный), то с пакетом не разрешено выполнять никаких действий, кроме обновления до новой версии и просмотра информации;
+ * Добавление автоматизированной системы сборки исходных текстов cpkg в пакет;
+ * Добавление возможности отображения зависимостей пакета в процедурах установки, удаления и просмотра информации о пакете;
+ * из-за проблемы с пакетом make-ca, для скачивания пакетов использовался костыль. Однако, в релизе Calmira GNU/Linux 2021.3 эта проблема была решена, поэтому и костыль был убран. Это значит, что cpkg 1.0pa4 не совместим с Calmira 2021.1--2021.2.1;
+ * Добавление возможности скачивания пакета из репозиториев ПО;
+ * Перевод части ПМ на русский язык;
+ * Другие незначительные фиксы.
 
 ** version 1.0pa3 ** 12.05.2021
 Prealpha 3.
