Исправлена функция ведения логов; начало рефракторинга и оптимизации кода; тестирование cpkg и исправление багов

--- a/src/changelog
+++ b/src/changelog
@@ -1,5 +1,6 @@
 ** version 1.0pa4 ** 15.05.2021
 Prealpha 4.
+ * Начало рефракторинга и оптимизации кода cpkg;
  * Исправлена функция веделия логов;
  * Добавлен приоритет пакетов. Если приоритет - `user` (пользовательский), то пакет можно удалить. Если приоритет `system` (системный), то с пакетом не разрешено выполнять никаких действий, кроме обновления до новой версии и просмотра информации;
  * Добавление автоматизированной системы сборки исходных текстов cpkg в пакет;
