--- a/src/changelog
+++ b/src/changelog
@@ -1,13 +1,17 @@
 ** version 1.0pa4 ** 15.05.2021
 Prealpha 4.
- * Начало рефракторинга и оптимизации кода cpkg;
- * Исправлена функция веделия логов;
- * Добавлен приоритет пакетов. Если приоритет - `user` (пользовательский), то пакет можно удалить. Если приоритет `system` (системный), то с пакетом не разрешено выполнять никаких действий, кроме обновления до новой версии и просмотра информации;
  * Добавление автоматизированной системы сборки исходных текстов cpkg в пакет;
  * Добавление возможности отображения зависимостей пакета в процедурах установки, удаления и просмотра информации о пакете;
  * из-за проблемы с пакетом make-ca, для скачивания пакетов использовался костыль. Однако, в релизе Calmira GNU/Linux 2021.3 эта проблема была решена, поэтому и костыль был убран. Это значит, что cpkg 1.0pa4 не совместим с Calmira 2021.1--2021.2.1;
  * Добавление возможности скачивания пакета из репозиториев ПО;
  * Перевод части ПМ на русский язык;
+ * Добавлен приоритет пакетов. Если приоритет - `user` (пользовательский), то пакет можно удалить. Если приоритет `system` (системный), то с пакетом не разрешено выполнять никаких действий, кроме обновления до новой версии и просмотра информации;
+ * Добавление функции редактирования списка пакетов;
+ * Добавление в функцию отображения зависимостей пакета вывода вспомогательного сообщения для установки, удаления или просмотра информации о пакете ("Перед установкой этого пакета установите зависимости из списка выше..." и т.п.)
+ * Добавление функции 'GetCalmiraVersion' для отображения версии дистрибутива;
+ * Добавление в makepkg.sh копирования в пакет документации к cpkg;
+ * Исправлена функция веделия логов;
+ * Начало рефракторинга и оптимизации кода cpkg;
  * Другие незначительные фиксы.
 
 ** version 1.0pa3 ** 12.05.2021
