Незначительные фиксы отдельных файлов; дополнение функции 'edit_src' из файла core-functions.sh

--- a/archive/history
+++ b/archive/history
@@ -24,3 +24,6 @@
 менеджер. Теперь он может собирать пакеты из исходного кода, скачивать их
 из репозиториев, просматривать информацию о каждом пакете, а так же имеет
 переводы на другие языки.
+
+Сейчас пакетный менеджер активно развивается и скоро дойдёт до стадии
+окончательного релиза.
