--- a/src/changelog
+++ b/src/changelog
@@ -1,4 +1,10 @@
-** version 1.0pa4 ** 15.05.2021
+** version 1.0b1 ** 30.06.2021
+Beta 1.
+ * Смена статуса с "автоматизированная утилита для работы с пакетами" на "пакетный менеджер";
+ * Повышение стабильности пакетного менеджера;
+ * Добавление функции работы с чёрным списком в cpkg. Если пакет занесли в чёрный список, то его нельзя будет удалить из системы
+
+** version 1.0pa4 ** 15.06.2021
 Prealpha 4.
  * Добавление автоматизированной системы сборки исходных текстов cpkg в пакет;
  * Добавление возможности отображения зависимостей пакета в процедурах установки, удаления и просмотра информации о пакете;
@@ -14,13 +20,13 @@ Prealpha 4.
  * Начало рефракторинга и оптимизации кода cpkg;
  * Другие незначительные фиксы.
 
-** version 1.0pa3 ** 12.05.2021
+** version 1.0pa3 ** 12.06.2021
 Prealpha 3.
  * Повышение стабильности пакетного менеджера
  * Исправлен баг с ошибкой занесения port-пакета в базу данных `cpkg`
  * Другие незначительные фиксы
 
-** version 1.0pa2 ** 12.05.2021
+** version 1.0pa2 ** 12.06.2021
 Prealpha 2.
  * улучшен алгоритм скачивания пакетов
  * исправлен баг с выходом из cpkg при автоматическом скачивании пакета в процедуре установки
@@ -28,5 +34,5 @@ Prealpha 2.
  * добавлены опции для скачивания как одного пакета, так и всех пакетов в репозитории в целом
  * всяческие незначительные фиксы и исправления
 
-** version 1.0pa1 **  10.05.2021
+** version 1.0pa1 **  10.06.2021
 Prealpha 1. First Release
