--- a/src/changelog
+++ b/src/changelog
@@ -1,5 +1,9 @@
 ** version 1.0b1 ** 30.06.2021
 Beta 1.
+ * Добавление предварительной версии условно-свободной лицензии Calmira Public License, под которой будут распространяться компоненты Calmira LX4
+ * Добавление информации о конфликтах пакета с определёнными зависимостями;
+ * Обновление функции поиска пакета среди установленных;
+ * Добавление дополнительной документации;
  * Смена статуса с "автоматизированная утилита для работы с пакетами" на "пакетный менеджер";
  * Повышение стабильности пакетного менеджера;
  * Добавление функции работы с чёрным списком в cpkg. Если пакет занесли в чёрный список, то его нельзя будет удалить из системы
