Дополнение документации cpkg (2)

--- a/archive/history
+++ b/archive/history
@@ -18,7 +18,11 @@
 следующего релиза Calmira 2021.2. Тогда это была PreAlpha версия, но она
 была намного лучше предыдущего cpkg-tools и подавала большие надежды.
 
-В Calmira 2021.3 войдёт первая Alpha версия cpkg-1.0. В этой версии cpkg
+Было произведено закрытое alpha-тестирование, на котором была создана лицензия
+Calmira PL-1.0, под которой в скором времени будут распространяться все
+наработки Calmira.
+
+В Calmira LX4 войдёт первая Beta версия cpkg-1.0. В этой версии cpkg
 очень много изменений и дополнений. Теперь это не "автоматизированная
 утилита для установки и удаления пакетов", а полноценный пакетный
 менеджер. Теперь он может собирать пакеты из исходного кода, скачивать их
