--- a/src/changelog
+++ b/src/changelog
@@ -1,5 +1,8 @@
+cpkg changelog. На основе git log.
+
 ** version 1.0b1 ** 30.06.2021
 Beta 1.
+ * Добавление функции проверки метаданных пакета;
  * Оптимизация работы cpkg;
  * Добавление предварительной версии условно-свободной лицензии Calmira Public License, под которой будут распространяться компоненты Calmira LX4
  * Добавление информации о конфликтах пакета с определёнными зависимостями;
