Обновление архива cpkg

--- a/archive/history
+++ b/archive/history
@@ -18,16 +18,31 @@
 следующего релиза Calmira 2021.2. Тогда это была PreAlpha версия, но она
 была намного лучше предыдущего cpkg-tools и подавала большие надежды.
 
-Было произведено закрытое alpha-тестирование, на котором была создана лицензия
-Calmira PL-1.0, под которой в скором времени будут распространяться все
-наработки Calmira.
+Первая версия cpkg вышла 28 мая 2021 г. в 14:30 по МСК. Тогда ещё не применялся
+метод сжатия xz, строение config.sh (файла с описанием пакета) было примитивным,
+а всё, что умел cpkg - это устанавливать и удалять ПО. Не было даже описаний
+пакетов! Но cpkg был написан с нуля, только лишь некоторые особо удачные функции
+перекочевали в него из cpkg-tools (print_msg остался неизменным, а install_pkg
+уже давно переработан так, что его не отличишь от того, который был в
+cpkg-tools). Сpkg получил статус автоматизированной утилиты для работы с
+пакетами, ведь она действительноупрощала жизнь. Вместо распаковки, копирования и
+"запоминания" установленных файлов пакета можно было ввести всего одну команду.
+
+С того времени прошло много времени, было выпущено ещё несколько предварительных
+Pre-alpha версий, было внесено множество изменений (с которыми вы можете
+ознакомиться в changelog).
+
+Было произведено закрытое alpha-тестирование, на котором выкатили релиз cpkg
+1.0b1 на основе первой альфа-версии, так же  была создана лицензия Calmira
+PL-1.0, под которой в скором времени будут распространяться все наработки
+Calmira.
 
 В Calmira LX4 войдёт первая Beta версия cpkg-1.0. В этой версии cpkg
 очень много изменений и дополнений. Теперь это не "автоматизированная
 утилита для установки и удаления пакетов", а полноценный пакетный
 менеджер. Теперь он может собирать пакеты из исходного кода, скачивать их
-из репозиториев, просматривать информацию о каждом пакете, а так же имеет
-переводы на другие языки.
+из репозиториев (криво), просматривать информацию о каждом пакете, а так же
+имеет переводы на другие языки.
 
 Сейчас пакетный менеджер активно развивается и скоро дойдёт до стадии
 окончательного релиза.
