--- a/src/changelog
+++ b/src/changelog
@@ -2,6 +2,7 @@ cpkg changelog. На основе git log.
 
 ** version 1.0b1 ** 30.06.2021
 Beta 1.
+ * Добавление функции генерации архива с метаданными для создания пакета;
  * Добавление проверки метадаты пакета;
  * Добавление возможности установки пакета в альтернативное место (смена префикса установки);
  * Добавление функции проверки метаданных пакета;
