Формирование первой стабильной версии v1.0

--- a/src/changelog
+++ b/src/changelog
@@ -1,5 +1,9 @@
 cpkg changelog. На основе git log.
 
+** version 1.0 ** 17.07.2021
+Окончателная стабильная версия пакетного менеджера
+ * Протестированная предыдущая v1.0b1 версия
+
 ** version 1.0b1 ** 30.06.2021
 Beta 1.
  * Актуализация документации;
