Копирование документации в нужные директории

--- a/archive/history
+++ b/archive/history
@@ -44,5 +44,8 @@ Calmira.
 из репозиториев (криво), просматривать информацию о каждом пакете, а так же
 имеет переводы на другие языки.
 
-Сейчас пакетный менеджер активно развивается и скоро дойдёт до стадии
-окончательного релиза.
+Однако, в LX4 1.0 пакетный менеджер не вошёл из-за серьёзных ошибок в работе.
+Окончательный релиз cpkg v1.1 войдёт в Calmira LX4 1.1 вместе с системой
+портов. Порты - надёжное и простое средство для сборки программ из исходного
+кода. Введение этого инструмента сделает использование Calmira намного
+удобнее.
