Исправление критического бага в функции 'dialog_msg', не позволяющего продолжить работу пакетного менеджера.

--- a/src/changelog
+++ b/src/changelog
@@ -1,8 +1,13 @@
 cpkg changelog. На основе git log.
 
-** version 1.0 ** 17.07.2021
-Окончателная стабильная версия пакетного менеджера
- * Протестированная предыдущая v1.0b1 версия
+** version 1.0 ** 24.07.2021
+Окончательная стабильная версия пакетного менеджера
+ * Протестированная предыдущая v1.0b1 версия.
+ * Исправление критического бага в функции `dialog_msg`, не позволяющего продолжить работу пакетного менеджера.
+ * Добавление защиты на удаление пакета - если не указана переменная `FILE` в информации о пакете (файл `config.sh`), то ПМ выдаст ошибку и завершит работу.
+ * Добавление функций для работы с системой портов.
+ * Совершенствование функций логирования.
+ * Повышение стабильности.
 
 ** version 1.0b1 ** 30.06.2021
 Beta 1.
