Актуализация документации и базы данных

--- a/src/changelog
+++ b/src/changelog
@@ -1,8 +1,12 @@
 cpkg changelog. На основе git log.
 
+** version develop **
+* Актуализация документации и базы данных
+
 ** version 1.0 ** 24.07.2021
 Окончательная стабильная версия пакетного менеджера
  * Протестированная предыдущая v1.0b1 версия.
+ * Добавление в функцию отображения информации о пакете ссылки на сайт пакета, пункт с рекомендуемыми зависимостями, а так же проверка факта на установку пакета из портов.
  * Исправление критического бага в функции `dialog_msg`, не позволяющего продолжить работу пакетного менеджера.
  * Добавление защиты на удаление пакета - если не указана переменная `FILE` в информации о пакете (файл `config.sh`), то ПМ выдаст ошибку и завершит работу.
  * Добавление функций для работы с системой портов.
