--- a/src/changelog
+++ b/src/changelog
@@ -1,7 +1,8 @@
 cpkg changelog. На основе git log.
 
 ** version develop **
-* Актуализация документации и базы данных
+* Удаление ненужных функций и аргументов командной строки;
+* Актуализация документации и базы данных.
 
 ** version 1.0 ** 24.07.2021
 Окончательная стабильная версия пакетного менеджера
