Формирование сборки с пакетом

--- a/src/changelog
+++ b/src/changelog
@@ -1,6 +1,8 @@
 cpkg changelog. На основе git log.
 
-** version develop **
+** version 1.1a1 **
+* Добавление новых утилит, написанных на C++;
+* Добавление нового функционала в `makepkg.sh`;
 * Удаление ненужных функций и аргументов командной строки;
 * Актуализация документации и базы данных.
 
