Добавление информации о runtime-зависимостях

--- a/src/changelog
+++ b/src/changelog
@@ -1,6 +1,7 @@
 cpkg changelog. На основе git log.
 
 ** version 1.1a1 **
+* Добавление поля для перечисления runtime-зависимостей в config.sh (и, соответственно, в сам cpkg);
 * Добавление новых утилит, написанных на C++;
 * Добавление нового функционала в `makepkg.sh`;
 * Удаление ненужных функций и аргументов командной строки;
